tests/ui/async-await/async-fn/dyn-pos.stderr
error[E0802]: the trait `AsyncFn` is not yet dyn-compatible
  --> $DIR/dyn-pos.rs:5:12
   |
LL | fn foo(x: &dyn async Fn()) {}
   |            ^^^^^^^^^^^^^^ `AsyncFn` is not yet dyn compatible
   |
help: consider using an opaque type instead
   |
LL | fn foo(x: &impl async Fn()) {}
   |            ~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0802`.
